--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 node_modules
-.idea
 .DS_STORE
+.idea/workspace.xml
+.idea/misc.xml
+#.idea
+#*.iml
+#scripts/app-bundle.js
+#scripts/app-bundle.js.map
+#scripts/vendor-bundle.js
